test/files/neg/bug800.scala
package test;
trait Test1 {
  val qualification : String;
  val qualification = false;
}
trait Test2 {
  var qualification : String;
  val qualification = false;
}
trait Test3 {
  val qualification : String;
  var qualification = false;
}
trait Test4 {
  var qualification : String;
  var qualification = false;
}
